@@ -4,9 +4,11 @@ export(hpaDownload)
 export(hpaExport)
 export(hpaListParam)
 export(hpaSubset)
+export(hpaVis)
 export(hpaVisPatho)
 export(hpaVisSubcell)
 export(hpaVisTissue)
+export(hpaXml)
 export(hpaXmlAntibody)
 export(hpaXmlGet)
 export(hpaXmlProtClass)
